[add] Setup of the API
